=== master

* Support compounds (e.g. UNION) in conjunction with Database#values on PostgreSQL (jeremyevans) (#2137)

* Support :use_advisory_lock option to Migrator.run to use advisory locks when running migrations (jeremyevans) (#2089)

* Support Database#with_advisory_lock on PostgreSQL, MySQL, and Microsoft SQL Server (jeremyevans) (#2089)

=== 5.77.0 (2024-02-01)

* Support create_table :without_rowid option on SQLite (loranger32) (#2126)

* Warn by default if trying to eager_graph/association_join an association that uses a block, when the block would be ignored (jeremyevans)

* Speed up validates_unique in validation_helpers plugin by using empty? instead of count == 0 (numbata) (#2122)

* Speed up regexp matches in sqlite adapter on Ruby 2.4+ (jeremyevans)

* Add sqlite adapter :regexp_function_cache option for specifying the cache object to use (paddor, jeremyevans) (#2116)

* Respect list plugin :top option when inserting the first row into the model's table (johanmagnusson) (#2115)

* Switch default connection pool to timed_queue on Ruby 3.4+ (jeremyevans)

* Support on_duplicate_columns={raise,warn} parameter in connection URL when using duplicate_columns_handler extension (jeremyevans)

* Add transaction_connection_validator extension for retrying transactions on new connection if there is a disconnect error when starting transaction (jeremyevans)

=== 5.76.0 (2024-01-01)

* Improve performance and flexibility of regexp matching in sqlite adapter (paddor) (#2108)

* Support SQL::Identifier for Database#tables :schema option values on PostgreSQL (jeremyevans)

* Support generating rcte queries using UNION or UNION ALL in the rcte plugin (jonathanfrias) (#2107)

* Make Database#table_exists? on PostgreSQL handle lock or statement timeout errors as evidence the table exists (jeremyevans) (#2106)

* Work around DateTime.jd fractional second bug on JRuby in named_timezones extension (jeremyevans)
